Fix Happy Club smile recognition and white space issues

--- a/projects/happyclub/style.css
+++ b/projects/happyclub/style.css
@@ -18,13 +18,15 @@
 
 body, html {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 #app-container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,7 +36,7 @@ body, html {
 
 .screen {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +44,7 @@ body, html {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 5px, 0;
+  padding: 0;
   text-align: center;
   z-index: 1;
 }
@@ -73,17 +75,17 @@ body, html {
   left: 0;
   display: block;
   overflow: hidden;
-  padding: 5px, 0;
+  padding: 5px 0;
 }
 
 #welcome-screen::before {
   top: 0;
-  padding: 5px, 0;
+  padding: 5px 0;
 }
 
 #welcome-screen::after {
   bottom: 0;
-  padding: 5px, 0;
+  padding: 5px 0;
   transform: rotate(180deg);
 }
 
@@ -466,7 +468,7 @@ body, html {
 /* Responsive adjustments */
 @media (max-width: 768px) {
   #canvas-container {
-    width: (100%-80px);
+    width: calc(100% - 80px);
   }
   
   .smiley-image {
@@ -496,7 +498,7 @@ body, html {
 
 @media (max-width: 480px) {
   #canvas-container {
-    width: (100%-80px);
+    width: calc(100% - 80px);
   }
   
   .smiley-image {
